# anise

./: .bazelignore  .gitattributes  .gitignore  .gitmodules  AUTHORS.md  BUILD  Cargo.toml  MODULE.bazel  README.md  WORKSPACE  anise-0.6.6-cp312-cp312-macosx_11_0_arm64.whl  bazel-app  bazel-bin  bazel-out  bazel-testlogs  dev-env-setup.sh  download_test_data.sh  index.html  light_time_correction_explanation.md  llms.txt  pytest_loc_kernel.lka  pytest_loc_kernel_report.lka  repro.py  run_cpp_tests.sh  run_stubs_gen.py  spk1.c  test_constants.tpc  test_hifitime.rs  test_metadata_build_read.anis
anise/: Cargo.toml  README.md  arch.md  build.rs
anise-cli/: Cargo.toml
anise-cli/src/: args.rs  inspect.rs  main.rs  mod.rs
anise-cli/tests/: convert_fk_missing_file.rs
anise-cpp/: BUILD  CMakeLists.txt  Cargo.toml  README.md  build.rs  test.sh
anise-cpp/src/: lib.rs
anise-cpp/tests/: main.cpp
anise-gui/: Cargo.toml  README.md  build.rs  index.html
anise-gui/src/: aesthetix.rs  analysis.rs  bpc.rs  epa.rs  main.rs  pca.rs  spk.rs  ui.rs
anise-gui/srcs/: analysis.rs
anise-py/: .gitignore  Cargo.toml  README.md  anise.astro.constants.pyi  anise.astro.pyi  anise.pyi  anise.rotation.pyi  generate_stubs.py  pyproject.toml
anise-py/anise/: __init__.py  __init__.pyi  analysis.py  analysis.pyi  anise.pyi  astro.pyi  constants.pyi  instrument.pyi  rotation.py  rotation.pyi  time.py  time.pyi  utils.py  utils.pyi
anise-py/anise/astro/: __init__.py  __init__.pyi  constants.py
anise-py/anise/instrument/: __init__.py
anise-py/notebooks/: 01 - Tutorial on querying SPK files.ipynb  02 - Tutorial on loading remote SPICE and ANISE files (meta almanac).ipynb  03 - Tutorial.ipynb  04 - Tutorial on computing Azimuth Elevation and Range data.ipynb  ANISE Tutorial for querying SPK files.ipynb  Tutorial 01 - Querying SPK files.ipynb  Tutorial 02 - Loading remote SPICE and ANISE files (meta almanac).ipynb  Tutorial 04 - Computing Azimuth Elevation and Range data.ipynb
anise-py/src/: astro.rs  bin.rs  constants.rs  errors.rs  lib.rs  rotation.rs  rotations.rs  solar_time.rs  utils.rs
anise-py/tests/: README.md  fov_plots.py  reqs.txt  test_almanac.py  test_analysis.py  test_astro.py  test_degree.py  test_ephemeris.py  test_hifitime.py  test_instrument.py  test_opm.py
anise-py/tutorials/: Tutorial 01 - Querying SPK files.ipynb  Tutorial 02 - Loading remote SPICE and ANISE files (meta almanac).ipynb  Tutorial 03 - Defining and working with the Orbit structure.ipynb  Tutorial 04 - Computing Azimuth Elevation and Range data.ipynb  Tutorial 05 - Using frame kernels and text planetary kernels.ipynb  Tutorial 06 - Sun probe Earth angle.ipynb  Tutorial 07 - Analysis.ipynb  Tutorial 08 - OEM and Covariance.ipynb  demo08.pca
anise/benches/: crit_bpc_rotation.rs  crit_jpl_ephemerides.rs  crit_planetary_data.rs  crit_spacecraft_ephemeris.rs  iai_jpl_ephemerides.rs  iai_jpl_ephemeris.rs  iai_spacecraft_ephemeris.rs
anise/fuzz/: Cargo.toml  README.md
anise/fuzz/fuzz_targets/: almanac_describe.rs  common_ephemeris_path.rs  convert_fk_items.rs  convert_tpc_items.rs  describe.rs  euler_parameter_dataset.rs  fkitem_extract_key.rs  fkitem_parse.rs  fuzz_metadata.rs  kpl_parse_bytes_fkitem.rs  kpl_parse_bytes_tpcitem.rs  load_from_bytes.rs  orientations_paths_path.rs  orientations_paths_root.rs  orientations_rotations_rotate.rs  parse_bpc.rs  parse_mut_bpc.rs  parse_mut_spk.rs  parse_spk.rs  planetary_dataset.rs  rotation_dcm_partialeq.rs  rotation_dcm_to_quaternion.rs  rotation_mrp_normalize.rs  rotation_mrp_partialeq.rs  rotation_quaternion_mul.rs  spacecraft_dataset.rs  tpcitem_extract_key.rs  try_find_ephemeris_root.rs
anise/fuzz/src/: lib.rs
anise/src/: constants.rs  errors.rs  lib.rs  py_errors.rs
anise/src/almanac/: aer.rs  bpc.rs  eclipse.rs  embed.rs  instrument.rs  meta.rs  mod.rs  planetary.rs  python.rs  solar.rs  solar_time.rs  spk.rs  transform.rs
anise/src/almanac/metaload/: metaalmanac.rs  metafile.rs  mod.rs  python.rs
anise/src/analysis/: dcm_expr.rs  elements.rs  event.rs  event_ops.rs  expr.rs  framedef.rs  mod.rs  python.rs  report.rs  search.rs  specs.rs  utils.rs  vector_expr.rs
anise/src/astro/: aberration.rs  mod.rs  occultation.rs  orbit.rs  orbit_equinoctial.rs  orbit_geodetic.rs  orbit_gradient.rs  orbit_mean_elements.rs  utils.rs
anise/src/ephemerides/: mod.rs  opm.rs  paths.rs  translate_to_parent.rs  translations.rs
anise/src/ephemerides/ephemeris/: almanac.rs  covariance.rs  mod.rs  oem.rs  python.rs  record.rs  spk.rs  stk.rs
anise/src/frames/: dynamic.rs  frame.rs  frameuid.rs  mod.rs
anise/src/math/: angles.rs  cartesian.rs  cartesian_py.rs  mod.rs  units.rs
anise/src/math/interpolation/: chebyshev.rs  hermite.rs  lagrange.rs  mod.rs
anise/src/math/rotation/: dcm.rs  dcm_py.rs  mod.rs  mrp.rs  quaternion.rs  quaternion_py.rs
anise/src/naif/: mod.rs  pretty_print.rs
anise/src/naif/daf/: daf.rs  data_types.rs  file_record.rs  mod.rs  mut_daf.rs  name_record.rs  summary_record.rs
anise/src/naif/kpl/: fk.rs  mod.rs  parser.rs  tpc.rs
anise/src/naif/pck/: mod.rs
anise/src/naif/spk/: mod.rs  summary.rs
anise/src/orientations/: dynamic.rs  mod.rs  paths.rs  rotate_to_parent.rs  rotations.rs
anise/src/structure/: location.rs  lookuptable.rs  metadata.rs  mod.rs  semver.rs
anise/src/structure/dataset/: builder.rs  datatype.rs  error.rs  location_dhall.rs  mod.rs  pretty_print.rs
anise/src/structure/ephemeris/: mod.rs
anise/src/structure/instrument/: enc_dec.rs  mod.rs  python.rs
anise/srcs/analysis/: mod.rs
anise/tests/: instrument.rs  lib.rs  naif.rs  perf_segment_cache.rs  stk_parsing.rs
anise/tests/almanac/: mod.rs
anise/tests/astro/: aer.rs  eclipsing.rs  mod.rs  orbit.rs
anise/tests/ephemerides/: mod.rs  parent_translation_verif.rs  paths.rs  spk_type8.rs  transform.rs  translation.rs
anise/tests/frames/: format.rs  mod.rs
anise/tests/instrument/: mod.rs
anise/tests/orientations/: mod.rs  validation.rs
anise/tests/test_analysis/: lro-occultation.py  requirements.txt  spk_validation_plots.py
src/: anise.rs  (+12 more)
(+309 files in other folders)
