[workspace]
resolver = "2"
members = ["anise", "anise-cli", "anise-gui", "anise-py"]

[workspace.package]
version = "0.3.2"
edition = "2021"
authors = ["Christopher Rabotin <christopher.rabotin@gmail.com>"]
description = "ANISE provides a toolkit and files for Attitude, Navigation, Instrument, Spacecraft, and Ephemeris data. It's a modern replacement of NAIF SPICE file."
homepage = "https://nyxspace.com/"
documentation = "https://docs.rs/anise/"
repository = "https://github.com/nyx-space/anise"
keywords = ["attitude", "navigation", "instrument", "spacecraft", "ephemeris"]
categories = ["science", "simulation"]
readme = "README.md"
license = "MPL-2.0"
exclude = [
    "cspice*",
    "data",
    "analysis",
    ".vscode",
    ".github",
    ".venv",
    ".vscode",
    "*.sh",
]

[workspace.dependencies]
hifitime = { git = "https://github.com/nyx-space/hifitime.git", features = [
    "std",
], branch = "master" }
memmap2 = "=0.9.4"
crc32fast = "=1.4.2"
der = { version = "0.7.8", features = ["derive", "alloc", "real"] }
log = "=0.4"
pretty_env_logger = "=0.5"
tabled = "=0.15"
const_format = "0.2"
nalgebra = { version = "0.32", default-features = true, features = [
    "serde-serialize",
] }
approx = "=0.5.1"
zerocopy = { version = "0.7.26", features = ["derive"] }
bytes = "=1.6.0"
snafu = { version = "0.8.0", features = ["backtrace"] }
lexical-core = "0.8.5"
heapless = "0.8.0"
rstest = "0.21.0"
pyo3 = { version = "0.21", features = ["multiple-pymethods"] }
pyo3-log = "0.10"
serde = "1"
serde_derive = "1"
serde_dhall = "0.12"

anise = { version = "0.3.2", path = "anise", default-features = false }

[profile.bench]
debug = true

[profile.release]
codegen-units = 1
lto = "thin"
