[workspace]
resolver = "2"
members = ["anise", "anise-cli", "anise-gui", "anise-py"]

[workspace.package]
version = "0.5.1"
edition = "2021"
authors = ["Christopher Rabotin <christopher.rabotin@gmail.com>"]
description = "ANISE provides a toolkit and files for Attitude, Navigation, Instrument, Spacecraft, and Ephemeris data. It's a modern replacement of NAIF SPICE file."
homepage = "https://nyxspace.com/"
documentation = "https://docs.rs/anise/"
repository = "https://github.com/nyx-space/anise"
keywords = ["attitude", "navigation", "instrument", "spacecraft", "ephemeris"]
categories = ["science", "simulation"]
readme = "README.md"
license = "MPL-2.0"
exclude = [
    "cspice*",
    "data",
    "analysis",
    ".vscode",
    ".github",
    ".venv",
    ".vscode",
    "*.sh",
]

[workspace.dependencies]
# hifitime = "4.0.1"
hifitime = { path = "../hifitime" }
memmap2 = "0.9.4"
crc32fast = "1.4.2"
der = { version = "0.7.8", features = ["derive", "alloc", "real"] }
log = "0.4"
pretty_env_logger = "0.5"
tabled = "=0.17"
nalgebra = { version = "0.33", default-features = true, features = [
    "serde-serialize",
] }
zerocopy = { version = "0.8.0", features = ["derive"] }
bytes = "1.6.0"
snafu = { version = "0.8.0", features = ["backtrace"] }
rstest = "0.23.0"
pyo3 = { version = "0.23", features = ["multiple-pymethods"] }
pyo3-log = "0.12"
numpy = "0.23"
ndarray = ">= 0.15, < 0.17"

anise = { version = "0.5.1", path = "anise", default-features = false }

[profile.bench]
debug = true

[profile.release]
codegen-units = 1
lto = "thin"
