module(
    name = "anise",
    version = "0.9.3",
)

bazel_dep(name = "rules_rust", version = "0.40.0")
bazel_dep(name = "rules_foreign_cc", version = "0.12.0")

rust = use_extension("@rules_rust//rust:extensions.bzl", "rust")
rust.toolchain(
    edition = "2021",
)
use_repo(rust, "rust_toolchains")

register_toolchains("@rust_toolchains//:all")
