[package]
name = "anise-gui"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
description = "A graphical user interface for ANISE"

[dependencies]
anise = { workspace = true }
hifitime = { workspace = true }
log = { workspace = true }
bytes = { workspace = true }
pretty_env_logger = { workspace = true }
egui-toast = "0.14"
eframe = { version = "0.28" }
egui = { version = "0.29" }
egui_extras = { version = "0.28", features = ["datepicker", "http", "image"] }
catppuccin-egui = { version = "5.1", default-features = false, features = [
    "egui28",
] }
rfd = { version = "0.15.0" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"
poll-promise = { version = "0.3.0", features = ["web"] }
