[build-system]
requires = ["maturin>=1.7,<2.0", "numpy>=1.16.0"]
build-backend = "maturin"

[project]
name = "anise"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version", "urls", "description", "authors", "license", "description", "description_content_type", "summary"]
[project.scripts]
anise-gui = "anise:exec_gui"

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "anise._anise"
