[package]
name = "anise"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
description = "Core of the ANISE library"

[dependencies]
lexical-core = { workspace = true }
hifitime = { workspace = true }
memmap2 = { workspace = true }
crc32fast = { workspace = true }
der = { workspace = true }
log = { workspace = true }
pretty_env_logger = { workspace = true }
const_format = { workspace = true }
nalgebra = { workspace = true }
approx = { workspace = true }
zerocopy = { workspace = true }
bytes = { workspace = true }
snafu = { workspace = true }
heapless = { workspace = true }
rstest = { workspace = true }
pyo3 = { workspace = true, optional = true }
pyo3-log = { workspace = true, optional = true }
url = { version = "2.5.0", optional = true }
serde = { workspace = true }
serde_derive = { workspace = true }
serde_dhall = { workspace = true, optional = true }
reqwest = { version = "0.11.23", optional = true, features = ["blocking"] }
platform-dirs = { version = "0.3.0", optional = true }
tabled = { workspace = true }

[dev-dependencies]
rust-spice = "0.7.6"
parquet = "49.0.0"
arrow = "49.0.0"
criterion = "0.5"
iai = "0.1"
polars = { version = "0.36.2", features = ["lazy", "parquet"] }
rayon = "1.7"
serde_yaml = "0.9.30"

[features]
default = ["metaload"]
# Enabling this flag significantly increases compilation times due to Arrow and Polars.
spkezr_validation = []
python = ["pyo3", "pyo3-log"]
metaload = ["serde_dhall", "url", "reqwest/blocking", "platform-dirs"]

[[bench]]
name = "iai_jpl_ephemerides"
harness = false

[[bench]]
name = "crit_jpl_ephemerides"
harness = false

[[bench]]
name = "crit_spacecraft_ephemeris"
harness = false

[[bench]]
name = "crit_bpc_rotation"
harness = false
