[package]
name = "anise"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
description = "Core of the ANISE library"

[package.metadata.docs.rs]
all-features = true
rustdoc-ars = ["--cfg", "docrs", "--generate-link-to-definition"]

[dependencies]
hifitime = { workspace = true }
memmap2 = { workspace = true }
crc32fast = { workspace = true }
der = { workspace = true }
log = { workspace = true }
nalgebra = { workspace = true }
zerocopy = { workspace = true }
bytes = { workspace = true }
snafu = { workspace = true }
const_format = "0.2"
heapless = "0.8.0"
serde = "1"
serde_derive = "1"
tabled = { workspace = true }
# Optional dependencies follow
pyo3 = { workspace = true, optional = true }
pyo3-log = { workspace = true, optional = true }
numpy = { workspace = true, optional = true }
ndarray = { workspace = true, optional = true }
url = { version = "2.5.0", optional = true }
serde_dhall = { version = "0.12", optional = true, default-features = false }
ureq = { version = "3.0.10", default-features = false, optional = true, features = [
    "rustls",
] }
platform-dirs = { version = "0.3.0", optional = true }
rust-embed = { version = "8.4.0", features = [
    "interpolate-folder-path",
    "include-exclude",
], optional = true }
regex = { version = "1.10.5", optional = true }
rayon = { workspace = true, optional = true } # Only used when building with Python

[dev-dependencies]
rust-spice = "0.7.6"
parquet = "55.0.0"
arrow = "55.0.0"
criterion = "0.6"
iai-callgrind = "0.15"
pretty_env_logger = { workspace = true }
rstest = { workspace = true }
approx = "0.5.1"
polars = { version = "0.46.0", features = ["lazy", "parquet"] }
rayon = "1.7"
serde_yml = "0.0.12"
rand_pcg = "0.9.0"
rand = "0.9.1"

[build-dependencies]
ureq = { version = "3.0.10", default-features = false, optional = true, features = [
    "rustls",
] }

[features]
default = ["metaload"]
python = ["pyo3", "pyo3-log", "numpy", "ndarray", "rayon"]
metaload = ["url", "ureq", "platform-dirs", "regex", "serde_dhall"]
embed_ephem = ["rust-embed", "ureq"]
# Enabling this flag significantly increases compilation times due to Arrow and Polars.
spkezr_validation = []

[[bench]]
name = "iai_jpl_ephemeris"
harness = false

[[bench]]
name = "iai_spacecraft_ephemeris"
harness = false

[[bench]]
name = "crit_jpl_ephemerides"
harness = false

[[bench]]
name = "crit_spacecraft_ephemeris"
harness = false

[[bench]]
name = "crit_bpc_rotation"
harness = false

[[bench]]
name = "crit_planetary_data"
harness = false
